package ucf.assignments;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.TextField;

public class ToDoListController {

    @FXML
    private TextField resultDisplay;

    @FXML
    public void allItemsButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void completedItemsButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void incompleteItemsButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void deleteCurrentListButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void addListButtonClicked(ActionEvent actionEvent) {
    }

    public void exportCurrentListButtonClicked(ActionEvent actionEvent) {
    }

    public void exportAllListsButtonClicked(ActionEvent actionEvent) {
    }

    public void loadListButtonClicked(ActionEvent actionEvent) {
    }

    public void loadMultipleListsButtonClicked(ActionEvent actionEvent) {
    }

    public void editNameButtonClicked(ActionEvent actionEvent) {
    }
}
