@startuml
'https://plantuml.com/class-diagram

class ToDoList{
    + main()
    + start()
}

class ToDoListController{
    - resultDisplay: TextField

    + addListButtonClicked
    + exportCurrentListButtonClicked
    + exportAllListsButtonClicked
    + loadListButtonClicked
    + loadMultipleListsButtonCLicked
    + editNameButtonClicked
    + allItemsButtonClicked
    + completedItemsButtonClicked
    + incompleteItemsButtonClicked
    + deleteCurrentListButtonClicked
}

class ListSorter {

}

javafx.Application <|-- ToDoList

ToDoList <-> ListSorter
ToDoList -- ToDoListController

@enduml